WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102915
WebMediaStreamComponent: Add missing assignment and copy operators
https://bugs.webkit.org/show_bug.cgi?id=102915
Summary
WebMediaStreamComponent: Add missing assignment and copy operators
Harald Alvestrand
Reported
2012-11-21 03:00:51 PST
This class should be copyable like the others of its class family.
Attachments
Patch
(3.76 KB, patch)
2012-11-21 03:15 PST
,
Harald Alvestrand
no flags
Details
Formatted Diff
Diff
Patch
(3.75 KB, patch)
2012-11-21 03:23 PST
,
Harald Alvestrand
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Harald Alvestrand
Comment 1
2012-11-21 03:15:42 PST
Created
attachment 175401
[details]
Patch
Adam Barth
Comment 2
2012-11-21 03:20:34 PST
Comment on
attachment 175401
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=175401&action=review
> Source/WebCore/platform/chromium/support/WebMediaStreamComponent.cpp:89 > +
You've got an extra line here.
Harald Alvestrand
Comment 3
2012-11-21 03:22:52 PST
Comment on
attachment 175401
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=175401&action=review
>> Source/WebCore/platform/chromium/support/WebMediaStreamComponent.cpp:89 >> + > > You've got an extra line here.
Fixed.
Harald Alvestrand
Comment 4
2012-11-21 03:23:57 PST
Created
attachment 175403
[details]
Patch
Adam Barth
Comment 5
2012-11-21 03:25:36 PST
Comment on
attachment 175403
[details]
Patch Thanks.
WebKit Review Bot
Comment 6
2012-11-21 03:28:24 PST
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
WebKit Review Bot
Comment 7
2012-11-21 03:49:10 PST
Comment on
attachment 175403
[details]
Patch Clearing flags on attachment: 175403 Committed
r135379
: <
http://trac.webkit.org/changeset/135379
>
WebKit Review Bot
Comment 8
2012-11-21 03:49:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug