WebMediaStreamComponent: Add assignment and copy operators https://bugs.webkit.org/show_bug.cgi?id=102915

Patch by Harald Alvestrand <hta@google.com> on 2012-11-21
Reviewed by Adam Barth.

Source/Platform:

* chromium/public/WebMediaStreamComponent.h:
(WebKit::WebMediaStreamComponent::WebMediaStreamComponent):
(WebKit::WebMediaStreamComponent::operator=):
(WebMediaStreamComponent):

Source/WebCore:

Tests that use this functionality are being submitted to Chrome.

* platform/chromium/support/WebMediaStreamComponent.cpp:
(WebKit::WebMediaStreamComponent::assign):
(WebKit):
* platform/chromium/support/WebMediaStreamDescriptor.cpp:

Canonical link: https://commits.webkit.org/121040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135379 268f45cc-cd09-0410-ab3c-d52691b4dbfc